# gha-tests

./: Makefile  main.c
.github/workflows/: installqt.yml  oui.yml  qt.yml  tests.yaml  zia.yml
pc/: .gitignore  CMakeLists.txt  config.ini  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pc.pro  pc_fr_FR.ts
pc/src/: httpmain.cpp  httpwindow.cpp  main.cpp  mainwindow.cpp
qt/: CMakeLists.txt
tests/: do-op.tests.c  error_handling.tests.c
zia/: .gitignore  CMakeLists.txt  Dockerfile  README.md  ServerZIA.ini  build_linux.sh  build_windows_release.bat  conanfile.txt  set_up_conan_linux.sh  set_up_conan_windows.bat
zia/src/: Client.cpp  Client.hpp  IModule.hpp  Mediator.cpp  Mediator.hpp  ModuleHTTP.cpp  ModuleHTTP.hpp  ModuleLoader.cpp  ModuleLoader.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  ZIApplication.cpp  ZIApplication.hpp  ZServer.cpp  ZServer.hpp  main.cpp
zia/www/: index.html  test.html
zia/www/directory/: file1.html  file2.html
zia/www/directory/subdirectory/: file3.html
